订单添加备注功能

--- a/lib/weui.wxss
+++ b/lib/weui.wxss
@@ -96,8 +96,33 @@ icon {
   text-align: right;
   color: #999999;
 }
-.weui-cell_access {
-  color: inherit;
+.weui-cell_access{
+  -webkit-tap-highlight-color:rgba(0, 0, 0, 0);
+  color:inherit;
+}
+.weui-cell_access:active{
+  background-color:#ECECEC;
+}
+.weui-cell_access .weui-cell__ft{
+  padding-right:13px;
+  position:relative;
+}
+.weui-cell_access .weui-cell__ft:after{
+  content:" ";
+  display:inline-block;
+  height:6px;
+  width:6px;
+  border-width:2px 2px 0 0;
+  border-color:#C8C8CD;
+  border-style:solid;
+  -webkit-transform:matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
+  transform:matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
+  position:relative;
+  top:-2px;
+  position:absolute;
+  top:50%;
+  margin-top:-4px;
+  right:2px;
 }
 .weui-cell__ft_in-access {
   padding-right: 13px;
