--- a/pages/homePage/homePage.wxss
+++ b/pages/homePage/homePage.wxss
@@ -1,6 +1,7 @@
 /* pages/homePage/homePage.wxss */
+@import "../../lib/commonCSS.wxss";
 page{
-  background-color: #efeff4;
+  background-color: #f5f5f5;
   width: 100%;
   /* position: relative; */
   /* overflow: hidden; */
@@ -12,11 +13,36 @@ page{
   display: block;
 }
 .show_images{
-  height: 525rpx;
-  background-color: white
+  background-color: white;
+}
+.top_top{
+  position: relative;
+}
+.top_top .top_top_moreImg{
+  position: absolute;
+  bottom: 15rpx;
+  right: 15rpx;
+  width: 78rpx;
+  height: 78rpx;
+  border-radius: 10rpx;
+  background-color: rgba(0,0,0,0.3);
+
+}
+.top_top .top_top_moreImg image{
+  margin-top: 3rpx;
+  margin-left: 21rpx;
+  width: 40rpx;
+  height: 40rpx;
+  float: left;
+}
+.top_top .top_top_moreImg text{
+  float: left;
+  margin-left: 12rpx;
+  font-size: 27rpx;
+  color: #fff;
 }
 .swiper-box {
-  height: 380rpx;
+  height: 351rpx;
 }
 .swiper-box .wx-swiper-dots.wx-swiper-dots-horizontal{
   margin-bottom: 2rpx;
@@ -55,58 +81,147 @@ page{
   width: 100%;
 }
 .top_bottom{
-  margin-top: 28rpx;
-  height: 120rpx;
-  /* margin-left: 10rpx; */
+  padding: 9rpx 17rpx;
 }
-.top_bottom_left_top{
-  width: 600rpx;
-  font-size: 36rpx;
-  color:#333;
-  margin-left: 2.5%;
-  overflow:hidden;
-  text-overflow:ellipsis;
-  white-space:nowrap;
+.top_bottom_top{
+  height: 60rpx;
+  margin-bottom: 6rpx;
+  overflow: hidden;
+  position: relative;
 }
-.top_bottom_left_top image{
-  height: 26rpx;
-  width: 26rpx
+.top_bottom_top .TBT_changeStore{
+  float:left;
+  margin: 9rpx 6rpx;
+  width: 129rpx;
+  padding: 6rpx 0;
+  line-height: 28rpx;
+  text-align: center;
+  background-color: #ff796e;
+  border-radius: 6rpx;
+  box-shadow: 0 0 10rpx 3rpx rgba(0,0,0,0.15) inset,0 0 3rpx 0 rgba(0,0,0,0.3);
+  font-size: 24rpx;
+  color: #ffeeee;
 }
-.top_bottom_left_bottom{
-  height: 50rpx;
-  width: 600rpx;
-  font-size: 28rpx;
-  color:#999;
-  margin-left: 3%;
-  margin-top: 15rpx;
-  white-space: pre-wrap;
+.top_bottom_top .TBT_storeName{
+  position: absolute;
+  top: 0;
+  left: 156rpx;
+  right: 80rpx;
+  line-height: 58rpx;
+  font-size: 31rpx;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
-.top_bottom_left_bottom image{
-  height: 25rpx;
-  width: 20rpx
-}
-.top_bottom_left{
-  height:100rpx;
-  width: 80%;
-  float: left;
- 
-}
-.top_bottom_right{
-  height: 90rpx;
-  width: 90rpx;
+.top_bottom_top .TBT_tel{
   float: right;
-  padding-right: 20rpx;
-  border-left: 2rpx solid #e5e5e5 
+  padding: 0 15rpx 0 25rpx;
+  border-left: 1px solid #eee;
+  position: relative;
+  width: 28rpx;
+  height: 100%;
 }
-.top_bottom_right image{
-  height: 80rpx;
-  width: 100rpx;
+.top_bottom_top image{
+  position: absolute;
+  top:14rpx;
+  width: 28rpx;
+  height: 28rpx;
 }
+.top_bottom_bottom{
+  overflow: hidden;
+}
+.top_bottom_bottom .TBB_viewCount{
+  float: right;
+  font-size: 20rpx;
+  line-height: 30rpx;
+  color: #bbb;
+}
+.top_bottom_bottom .TBB_viewCount image{
+  margin-bottom: -3rpx;
+  margin-right: 12rpx;
+  width: 24rpx;
+  height: 24rpx;
+}
+
+/**
+门店详细信息
+*/
+.storeDetail{
+  margin-top: 21rpx;
+  background-color: white;
+  padding: 26rpx 26rpx 23rpx 26rpx;
+}
+.storeDetail .storeDetail_Addr{
+  font-size: 31rpx;
+  line-height: 42rpx;
+  position: relative;
+}
+.storeDetail_Addr .SDA_icon{
+  position: absolute;
+  top:0;
+  height: 100%;
+}
+.storeDetail_Addr .SDA_icon image{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 42rpx;
+  height: 42rpx;
+}
+.storeDetail_Addr .SDA_left{
+  left:0
+}
+.storeDetail_Addr .SDA_mid{
+  margin: 0 68rpx;
+  overflow : hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.storeDetail_Addr .SDA_right{
+  right: 45rpx
+}
+
+.storeDetail .storeDetail_Info{
+  margin-top: 23rpx;
+  padding-top: 24rpx;
+  border-top: 1px solid #eee;
+  overflow: hidden;
+  letter-spacing: 1px;
+}
+.storeDetail_Info .SDI_item{
+  line-height: 32rpx;
+}
+.storeDetail_Info .SDI_item image{
+  float: left;
+  width: 32rpx;
+  height: 32rpx;
+  margin-right: 20rpx;
+}
+.storeDetail_Info .SDI_item1{
+  margin-bottom: 19rpx;
+  float: left;
+  font-size: 27rpx;
+  color: #777;
+}
+.storeDetail_Info .SDI_openTime{
+  margin-right: 20rpx;
+  min-width: 50%;
+}
+.storeDetail_Info .SDI_item2{
+  clear: left;
+  font-size: 25rpx;
+  color: #aaa;
+}
+
+
+
 /** 
   第二块
 */
 .showProject{
-  margin-top: 10rpx;
+  margin-top: 21rpx;
   height: auto;
   background-color: white
 }
@@ -145,7 +260,25 @@ page{
   height: 200rpx;
   width: 200rpx;
   overflow: hidden;
- 
+  position: relative;
+}
+.mid_mid_content_left .MMCL_newIcon{
+  position:absolute;
+  right: 0;
+  top: 0;
+  width: 0;
+  height: 0;
+  border-top: 50rpx solid #ff796e;
+  border-left: 50rpx solid transparent;
+  color: #fee;
+}
+.mid_mid_content_left .MMCL_newIcon text{
+  position:absolute;
+  right: 0;
+  font-size: 19rpx;
+  right: 6rpx;
+  top: -48rpx;
+
 }
 /* .leftImg{
 height: 100%;
@@ -196,12 +329,13 @@ width: 100%;
   height: 60rpx;
   width: 100%;
 }
+
 /** 
 页面第三部分
 */
 .showTechnician{
   margin-top: 10rpx;
-  height: 385rpx;
+  /*height: 385rpx;*/
   background-color: white
 }
 .bottom_top{
@@ -225,13 +359,12 @@ width: 100%;
 }
 .bottom_bottom{
   height: 310rpx;
-  background-color: #efeff4;
+  background-color: #f5f5f5;
 }
 .bottom_bottom_list{
   display: inline-block;
   height: 310rpx;
   width: 28%;
-
   /* float: left; */
   margin-left: 4%;
   margin-top: 10rpx;
