--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -14,6 +14,85 @@ page {
   margin-bottom: 100rpx;
 }
 
+#order .coverMask {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  transition: opacity 0.2s ease-in;
+}
+
+#order .coverMask.opacity {
+  opacity: 0;
+}
+
+#order .coverMask.hide {
+  left: -100%;
+}
+
+#order .cover_Remark {
+  transition: all 0.2s ease-in;
+  position: absolute;
+  bottom: 0;
+  height: 500rpx;
+  width: 100%;
+  background-color: #fff;
+}
+
+#order .cover_Remark.hideInBottom {
+  bottom: -500rpx;
+}
+
+.cover_Remark .CR_title {
+  width: 100%;
+  height: 90rpx;
+  background-color: #f8f6f3;
+  font-size: 40rpx;
+}
+
+.cover_Remark .CR_title view {
+  text-align: center;
+  display: inline-block;
+  line-height: 90rpx;
+}
+
+.cover_Remark .CR_title .CRT_item {
+  color: #aaa;
+  width: 20%;
+}
+
+.cover_Remark .CR_title .CRT_name {
+  width: 60%;
+}
+
+.cover_Remark .CR_content {
+  padding: 30rpx;
+  position: relative;
+}
+
+.cover_Remark .CR_content .CRC_textarea {
+  height: 350rpx;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 30rpx 30rpx 50rpx 30rpx;
+  font-size: 30rpx;
+  line-height: 40rpx;
+  border: 1px solid #ccc;
+  background-color: #f8f8f8;
+}
+
+.cover_Remark .CR_content .CRC_textCnt {
+  position: absolute;
+  right: 45rpx;
+  bottom: 35rpx;
+  color: #aaa;
+  font-size: 28rpx;
+}
+
+
 .friendsOrder {
   height: 80rpx;
   width: 100%;
@@ -35,6 +114,9 @@ page {
   width: 95%;
   margin-left: 5%;
   border-bottom: 4rpx solid #e5e5e5;
+}
+.the_rows:last-child {
+  border: none;
 }
 
 .content_text {
@@ -380,6 +462,12 @@ radio {
   text-align: right;
   font-size: 35rpx;
   color: #b5b6b6;
+}
+
+.content_text_right2.orderRemark {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .other-button-hover {
