--- a/pages/homePage/homePage.wxss
+++ b/pages/homePage/homePage.wxss
@@ -94,12 +94,13 @@ page{
   margin: 9rpx 6rpx;
   width: 129rpx;
   padding: 6rpx 0;
-  line-height: 28rpx;
+  line-height: 30rpx;
   text-align: center;
   background-color: #ff796e;
   border-radius: 6rpx;
   box-shadow: 0 0 10rpx 3rpx rgba(0,0,0,0.15) inset,0 0 3rpx 0 rgba(0,0,0,0.3);
   font-size: 24rpx;
+  font-weight: bold;
   color: #ffeeee;
 }
 .top_bottom_top .TBT_storeName{
@@ -108,7 +109,7 @@ page{
   left: 156rpx;
   right: 80rpx;
   line-height: 58rpx;
-  font-size: 31rpx;
+  font-size: 34rpx;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -165,8 +166,8 @@ page{
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  width: 42rpx;
-  height: 42rpx;
+  width: 36rpx;
+  height: 36rpx;
 }
 .storeDetail_Addr .SDA_left{
   left:0
@@ -180,7 +181,7 @@ page{
   -webkit-box-orient: vertical;
 }
 .storeDetail_Addr .SDA_right{
-  right: 45rpx
+  right: 36rpx
 }
 
 .storeDetail .storeDetail_Info{
@@ -295,6 +296,15 @@ width: 100%;
   font-size: 36rpx;
   color:#333;
 }
+.mid_mid_content_mid_top{
+  font-size:36rpx;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden
+}
+.mid_mid_content.longRight .mid_mid_content_mid{
+  width:38%;
+}
 .mid_mid_content_mid_mid{
   margin-top: 20rpx;
   font-size: 28rpx;
@@ -308,6 +318,9 @@ width: 100%;
   margin-top: 3%;
   font-size: 28rpx
 }
+.mid_mid_content.longRight .mid_mid_content_right{
+  width:30%;
+}
 .mid_mid_content_right{
   float: right;
   height:175rpx;
@@ -315,19 +328,20 @@ width: 100%;
 }
 .mid_mid_content_right_top{
   margin-top: 30rpx;
-  text-align: center;
-  font-size: 24rpx;
+  text-align: right;
+  font-size: 22rpx;
+  margin-right: 20rpx;
   color:#999;
 }
 .mid_mid_content_right_bottom{
   margin-top: 64rpx;
-  /* height:80rpx;
-  width:200rpx; */
 }
-.mid_mid_content_right image{
+.mid_mid_content_right_bottom image{
+  float: right;
   margin-top: 30rpx;
   height: 60rpx;
-  width: 100%;
+  width: 180rpx;
+  margin-left: -15rpx
 }
 
 /** 
